--- a/assets/studentDashboard.css
+++ b/assets/studentDashboard.css
@@ -114,7 +114,7 @@ body{
     text-align: center;
 }
 .profile{
-    background-image: url("../img/StudentProfile.png");
+    /* background-image: url("../img/StudentProfile.png"); */
     background-size: 60px;
     background-repeat: no-repeat;
     background-position: center;
