--- a/views/studentdashboard.ejs
+++ b/views/studentdashboard.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextResultz | Dashboard</title>
-    <link rel="icon" href="./img/favicon.ico">
+    <link rel="icon" href="../assets/favicon.ico">
     <link rel="stylesheet" href="../assets/studentDashboard.css">
     <script src="https://kit.fontawesome.com/552542671f.js" crossorigin="anonymous"></script>
     
