--- a/views/studentlogin.ejs
+++ b/views/studentlogin.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextResultz | Student login</title>
     <link rel="stylesheet" href="../assets/studentlogin.css">
-    <link rel="icon" href="./img/favicon.ico">
+    <link rel="icon" href="../assets/favicon.ico">
     <script src="https://kit.fontawesome.com/552542671f.js" crossorigin="anonymous"></script>
 </head>
 
