--- a/views/studentregistration.ejs
+++ b/views/studentregistration.ejs
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NextResultz | Register Student</title>
   <link rel="stylesheet" href="../assets/studentregistration.css">
-  <link rel="icon" href="./img/favicon.ico">
+  <link rel="icon" href="../assets/favicon.ico">
   <script src="https://kit.fontawesome.com/552542671f.js" crossorigin="anonymous"></script>
 </head>
 
