--- a/views/facultylogin.ejs
+++ b/views/facultylogin.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NextResultz | Faculty Login</title>
-    <link rel="stylesheet" href="../assets/facultylogin.css">
+    <link rel="stylesheet" href="../assets/css/facultylogin.css">
     <link rel="icon" href="../assets/favicon.ico">
     <script src="https://kit.fontawesome.com/552542671f.js" crossorigin="anonymous"></script>
 </head>
