--- a/views/studentregistration.ejs
+++ b/views/studentregistration.ejs
@@ -53,7 +53,7 @@
             <div class="input-box">
               <span class="details">Branch/Stream</span>
               <select required type="text" name="branch" id="branch">
-                <option disabled selected value> - select sem - </option>
+                <option disabled selected value> - select branch - </option>
                 <option value="BTech CSE">BTech CSE</option>
                 <option value="BTech BioE">BTech BioE</option>
                 <option value="BCA">BCA</option>
