--- a/views/studentregistration.ejs
+++ b/views/studentregistration.ejs
@@ -72,7 +72,7 @@
             </div>
             <div class="input-box">
               <span class="details">Phone Number</span>
-              <input type="text" name="phone" placeholder="Enter your number" required>
+              <input type="text" name="phone" placeholder="Enter your number" required pattern="[0-9]" maxlength="10">
             </div>
             <div class="input-box">
               <span class="details">Personal mail</span>
