--- a/views/studentdashboard.ejs
+++ b/views/studentdashboard.ejs
@@ -165,7 +165,7 @@
                 <h2 class="sgpa">SGPA: 8.9</h2>
                 <h3> <i>Result: Pass</i></h3>
                 <h5 class="percentile"> <i>*Top among <span>98.76</span> percentile from your batch in
-                        sem <span>IV</span>.</i></h5>
+                        sem <span><%=sem%></span>.</i></h5>
             </div>
         </div>
     </div>
